@@ -212,6 +212,11 @@ int main(int argc, char *argv[]) {
     if (snprintf(command, sizeof(command), "nmap %s", cptr) >= (int) sizeof(command)) {
         error("Warning: NMAP_ARGS variable is too long, truncated");
     }
+    /* copy rest of command-line arguments */
+    for (i = 1; i < argc && strlen(command) + strlen(argv[i]) + 1 < sizeof(command); i++) {
+      strcat(command, " ");
+      strcat(command, argv[i]);
+    }
     myargc = arg_parse(command, &myargv);
     if (myargc < 1) {
       fatal("NMAP_ARG variable could not be parsed");
